# cloudy

./: README.md  cloudy.cabal  run.sh  stack.yaml
app/: Main.hs  Master.hs  Slave.hs  Types.hs  WorkQueue.hs
