name:                cloudy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/uroboros/cloudy
license:             BSD3
license-file:        LICENSE
author:              Ryan Lemmer
maintainer:          @ryanlemmer
copyright:           2017 Ryan Lemmer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable cloudy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Types, Master, Slave
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , binary
                     , bytestring
                     , containers
                     , network
                     , network-multicast
                     , network-transport
                     , network-transport-tcp
                     , transformers
                     , data-accessor
                     , cloudy
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , random
                     , binary
  default-language:    Haskell2010

test-suite cloudy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cloudy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/uroboros/cloudy
